# srm

./: CMakeLists.txt  configure
.github/workflows/: build.yml  cleanup.yml  makefile.yml
src/: error.c  sunlink.c
win/: config.h  unistd.h
